# pyswell

./: .pre-commit-config.yaml  setup.cfg  setup.py
src/pyswell/: dep.py  logger.py  skeleton.py  structure.py  swell.py
src/pyswell/templates/: .clang-tidy  .gitignore  .swell.yml  CHANGELOG.md  CMakeLists.txt  __init__.py  conanfile.txt  main.cc  package.py  template.CMakeLists.txt  template.README.md
tests/: test_skeleton.py
